syntax = "proto3";

package calculator;

option go_package = "github.com/Clement-Jean/grpc-go-course/calculator/proto";

message AvgRequest {
  int64 input = 1;
}

message AvgResponse {
  float avg = 1;
}

service AvgService {
  rpc Avg (stream AvgRequest) returns (AvgResponse);
}

