syntax = "proto3";

package calculator;

option go_package = "github.com/Clement-Jean/grpc-go-course/calculator/proto";

message MaxRequest {
  int32 input = 1;
}

message MaxResponse {
  int32 max = 1;
}

service MaxService {
  rpc Max (stream MaxRequest) returns (stream MaxResponse);
}